Add songs section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<option>Rock Action</option>
 						<option>Some Great Reward</option>
 						<option>Rust in Peace</option>
-						<option>Painkiller</option>
+						<option>Ram it Down</option>
 						<option>The Wall</option>
 					</select><br>
 				</div>
@@ -76,5 +76,40 @@
 		</section>
 
 		<!-- Rigth side -->
+		<section class="songs">
+			<h4 class="songchoices">Blasphemous Rumors</h4>
+			<ul>
+				<li class="songnamefloat">Depeche Mode</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Some Great Reward</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Rock</li>
+			</ul>
+			<h4 class="songchoices">Take Me Somewhere Nice</h4>
+			<ul>
+				<li class="songnamefloat">Mogwai</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Rock Action</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Rock</li>
+			</ul>
+			<h4 class="songchoices">Electric Eye</h4>
+			<ul>
+				<li class="songnamefloat">Judas Priest</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Screaming for Vengence</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Rock</li>
+			</ul>
+			<h4 class="songchoices">Fat Old Sun</h4>
+			<ul>
+				<li class="songnamefloat">Pink Floyd</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Atom Heart Mother</li>
+				<li class="songnamefloat">|</li>
+				<li class="songnamefloat">Rock</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
