--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 	<div id="wrapper">
-		<section class="top">
+		<nav>
 			View music |
 			<a href="#">Add Music</a> |
 			<a href="#">Profile</a>
-		</section>
+		</nav>
 
 		<!-- Left side -->
 		<section class="options">
@@ -21,7 +22,7 @@
 				<input id="slide" type="range" name="songlength" min="0" max="10">
 				<div class="space">
 					<label>Artist:</label><br>
-					<select class="dropdown" id="artist" name="artist" img src="images/arrow.png">
+					<select class="dropdown" id="artist" name="artist">
 						<option>Options</option>
 						<option>Mogwai</option>
 						<option>Depeche Mode</option>
@@ -81,7 +82,7 @@
 			<ul>
 				<li class="songnamefloat">Depeche Mode</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Some Great Reward</li>
+				<li class="songnamefloat">Great</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
@@ -95,9 +96,9 @@
 			</ul>
 			<h4 class="songchoices">Electric Eye</h4>
 			<ul>
-				<li class="songnamefloat">Judas Priest</li>
+				<li class="songnamefloat">Priest</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Screaming for Vengence</li>
+				<li class="songnamefloat">Screaming</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
@@ -105,7 +106,7 @@
 			<ul>
 				<li class="songnamefloat">Pink Floyd</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Atom Heart Mother</li>
+				<li class="songnamefloat">Atom Heart</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
