--- a/index.html
+++ b/index.html
@@ -78,39 +78,40 @@
 
 		<!-- Rigth side -->
 		<section class="songs">
-			<h4 class="songchoices">Blasphemous Rumors</h4>
+			<h4 id="name0" class="songchoices">Blasphemous Rumors</h4>
 			<ul>
-				<li class="songnamefloat">Depeche Mode</li>
+				<li id="artist0" class="songnamefloat">Depeche Mode</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Great</li>
+				<li id="album0" class="songnamefloat">Great</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
-			<h4 class="songchoices">Take Me Somewhere Nice</h4>
+			<h4 id="name1" class="songchoices">Take Me Somewhere Nice</h4>
 			<ul>
-				<li class="songnamefloat">Mogwai</li>
+				<li id="artist1" class="songnamefloat">Mogwai</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Rock Action</li>
+				<li id="album1" class="songnamefloat">Rock Action</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
-			<h4 class="songchoices">Electric Eye</h4>
+			<h4 id="name2" class="songchoices">Electric Eye</h4>
 			<ul>
-				<li class="songnamefloat">Priest</li>
+				<li id="artist2" class="songnamefloat">Priest</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Screaming</li>
+				<li id="album2" class="songnamefloat">Screaming</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
-			<h4 class="songchoices">Fat Old Sun</h4>
+			<h4 id="name3" class="songchoices">Fat Old Sun</h4>
 			<ul>
-				<li class="songnamefloat">Pink Floyd</li>
+				<li id="artist3" class="songnamefloat">Pink Floyd</li>
 				<li class="songnamefloat">|</li>
-				<li class="songnamefloat">Atom Heart</li>
+				<li id="album3" class="songnamefloat">Atom Heart</li>
 				<li class="songnamefloat">|</li>
 				<li class="songnamefloat">Rock</li>
 			</ul>
 		</section>
 	</div>
+	<script type="text/javascript" src="scripts/js-101.js"></script>
 </body>
 </html>
